tests/good/interpret/056-recfun.clap
def f (x) = if x < 0 then 42 else f (x-1)

val q = f(12)

