tests/bad/typing/002-char-instead-of-bool.clap
val x = if 'e' then 42 else 36

